tests/baselines/reference/unicodeExtendedEscapesInTemplates17_ES6.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates17_ES6.ts(2,12): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates17_ES6.ts(2,17): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates17_ES6.ts(2,22): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates17_ES6.ts (3 errors) ====
    
    var x = `\u{r}\u{n}\u{t}`;
               
!!! error TS1125: Hexadecimal digit expected.
                    
!!! error TS1125: Hexadecimal digit expected.
                         
!!! error TS1125: Hexadecimal digit expected.
    